fix:overflow item

--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,6 @@ body.profile-page footer {
     display: flex;
     align-items: center;
     gap: 12px;
-    width: 1500px;
     border-radius: 10px;
     position: center;
     border: radius 10px;
